Make sure the plugin compiles with Java 8